--- a/make-your-erection-longer-and-stronger-with-maleextra.html
+++ b/make-your-erection-longer-and-stronger-with-maleextra.html
@@ -99,6 +99,7 @@ font-size:15px;
 			<ul class="xoxo">
 
 		<li id="recent-posts-2" class="widget-container widget_recent_entries">		<h3 class="widget-title">Recent Posts</h3>		<ul>
+				<li><a href="https://polskie-sloty.com" title="https://polskie-sloty.com">https://polskie-sloty.com</a></li>
 				<li><a href="http://maleextraweb.com/most-amazing-male-formulation-on-the-market-maleextra.html" title="Most amazing male formulation on the market – MaleExtra">Most amazing male formulation on the market – MaleExtra</a></li>
 				<li><a href="http://maleextraweb.com/have-better-sex-for-longer-with-maleextra.html" title="Have better sex for longer with MaleExtra">Have better sex for longer with MaleExtra</a></li>
 				<li><a href="http://maleextraweb.com/maleextra-gives-you-the-advantage-in-bed.html" title="MaleExtra gives you the advantage in bed">MaleExtra gives you the advantage in bed</a></li>
